--- a/Welcome_To_Colab.ipynb
+++ b/Welcome_To_Colab.ipynb
@@ -18,7 +18,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "35f088db-b7dd-497c-9364-ceedfbf25cd0"
+        "outputId": "35f088db-b7dd-497c-9364-ceedfbf25cd0",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -87,7 +88,8 @@
         "outputId": "d4787023-49a5-4726-8f0d-76a4704e3c0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "collapsed": true
       },
       "execution_count": 1,
       "outputs": [
@@ -5137,126 +5139,6 @@
       "source": [
         "import tensorflow as tf\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-        "\n",
-        "# Set the path to your dataset directory\n",
-        "dataset_dir = '/content/train'\n",
-        "\n",
-        "# Set the desired image and batch sizes\n",
-        "image_size = (48, 48)\n",
-        "batch_size = 32\n",
-        "\n",
-        "# Create an ImageDataGenerator for data augmentation and preprocessing\n",
-        "datagen = ImageDataGenerator(\n",
-        "    rescale=1./255,\n",
-        "    rotation_range=20,\n",
-        "    width_shift_range=0.2,\n",
-        "    height_shift_range=0.2,\n",
-        "    shear_range=0.2,\n",
-        "    zoom_range=0.2,\n",
-        "    horizontal_flip=True,\n",
-        "    validation_split=0.2\n",
-        ")\n",
-        "\n",
-        "# Load and preprocess the training set\n",
-        "train_generator = datagen.flow_from_directory(\n",
-        "    dataset_dir,\n",
-        "    target_size=image_size,\n",
-        "    batch_size=batch_size,\n",
-        "    class_mode='categorical',\n",
-        "    subset='training',\n",
-        "    classes=['angry', 'disgust', 'fear', 'happy', 'neutral', 'sad', 'surprise']\n",
-        ")\n",
-        "\n",
-        "# Load and preprocess the validation set\n",
-        "validation_generator = datagen.flow_from_directory(\n",
-        "    dataset_dir,\n",
-        "    target_size=image_size,\n",
-        "    batch_size=batch_size,\n",
-        "    class_mode='categorical',\n",
-        "    subset='validation',\n",
-        "    classes=['angry', 'disgust', 'fear', 'happy', 'neutral', 'sad', 'surprise']\n",
-        ")\n",
-        "\n",
-        "# Define the model architecture\n",
-        "model = tf.keras.Sequential([\n",
-        "    tf.keras.layers.Conv2D(32, (3, 3), activation='relu', input_shape=(48, 48, 3)),\n",
-        "    tf.keras.layers.MaxPooling2D((2, 2)),\n",
-        "    tf.keras.layers.Conv2D(64, (3, 3), activation='relu'),\n",
-        "    tf.keras.layers.MaxPooling2D((2, 2)),\n",
-        "    tf.keras.layers.Conv2D(128, (3, 3), activation='relu'),\n",
-        "    tf.keras.layers.MaxPooling2D((2, 2)),\n",
-        "    tf.keras.layers.Flatten(),\n",
-        "    tf.keras.layers.Dense(128, activation='relu'),\n",
-        "    tf.keras.layers.Dense(7, activation='softmax')\n",
-        "])\n",
-        "\n",
-        "# Compile the model\n",
-        "model.compile(optimizer='adam',\n",
-        "              loss='categorical_crossentropy',\n",
-        "              metrics=['accuracy'])\n",
-        "\n",
-        "# Train the model\n",
-        "history = model.fit(\n",
-        "    train_generator,\n",
-        "    epochs=10,\n",
-        "    validation_data=validation_generator\n",
-        ")\n",
-        "\n",
-        "# Save the trained model\n",
-        "model.save('emotions_model.h5')"
-      ],
-      "metadata": {
-        "id": "3nCQFbeNNUfU",
-        "outputId": "e49e230d-01c8-4b8a-f2c8-fc5c485d2e8d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found 22968 images belonging to 7 classes.\n",
-            "Found 5741 images belonging to 7 classes.\n",
-            "Epoch 1/10\n",
-            "718/718 [==============================] - 43s 53ms/step - loss: 1.7939 - accuracy: 0.2520 - val_loss: 1.7643 - val_accuracy: 0.2743\n",
-            "Epoch 2/10\n",
-            "718/718 [==============================] - 37s 52ms/step - loss: 1.7402 - accuracy: 0.2834 - val_loss: 1.7121 - val_accuracy: 0.3005\n",
-            "Epoch 3/10\n",
-            "718/718 [==============================] - 38s 52ms/step - loss: 1.6682 - accuracy: 0.3294 - val_loss: 1.6235 - val_accuracy: 0.3520\n",
-            "Epoch 4/10\n",
-            "718/718 [==============================] - 37s 52ms/step - loss: 1.5746 - accuracy: 0.3817 - val_loss: 1.5372 - val_accuracy: 0.4031\n",
-            "Epoch 5/10\n",
-            "718/718 [==============================] - 37s 52ms/step - loss: 1.5016 - accuracy: 0.4161 - val_loss: 1.5089 - val_accuracy: 0.4173\n",
-            "Epoch 6/10\n",
-            "718/718 [==============================] - 37s 52ms/step - loss: 1.4491 - accuracy: 0.4390 - val_loss: 1.4456 - val_accuracy: 0.4431\n",
-            "Epoch 7/10\n",
-            "718/718 [==============================] - 38s 52ms/step - loss: 1.4131 - accuracy: 0.4535 - val_loss: 1.4331 - val_accuracy: 0.4499\n",
-            "Epoch 8/10\n",
-            "718/718 [==============================] - 37s 52ms/step - loss: 1.3887 - accuracy: 0.4637 - val_loss: 1.3879 - val_accuracy: 0.4715\n",
-            "Epoch 9/10\n",
-            "718/718 [==============================] - 37s 52ms/step - loss: 1.3636 - accuracy: 0.4729 - val_loss: 1.4072 - val_accuracy: 0.4536\n",
-            "Epoch 10/10\n",
-            "718/718 [==============================] - 37s 52ms/step - loss: 1.3470 - accuracy: 0.4846 - val_loss: 1.3541 - val_accuracy: 0.4736\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/keras/src/engine/training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
-            "  saving_api.save_model(\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import tensorflow as tf\n",
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
         "\n",
@@ -5310,11 +5192,11 @@
         "model.save('emotion_recognition_model.h5')"
       ],
       "metadata": {
-        "id": "Sivzo0P7ecvv",
-        "outputId": "208b8e19-b9b4-4c6b-ef33-a540e8cdb446",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Sivzo0P7ecvv",
+        "outputId": "208b8e19-b9b4-4c6b-ef33-a540e8cdb446"
       },
       "execution_count": 8,
       "outputs": [
@@ -5386,11 +5268,11 @@
         "print(\"Confidence:\", confidence)"
       ],
       "metadata": {
-        "id": "GblD-CWGh6hW",
-        "outputId": "789f4c1a-0950-47ba-ba2c-27d662bebd95",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "GblD-CWGh6hW",
+        "outputId": "789f4c1a-0950-47ba-ba2c-27d662bebd95"
       },
       "execution_count": 13,
       "outputs": [
